// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Card Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    <div
      style="width: 400px; height: 400px;"
    >
      <div
        class="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-hHftDr sc-dmlrTW cLDXoV gKJALV sc-cTkwdZ kyJVgU sc-jNMdTA eIbWGx"
      >
        <div
          class="sc-gKsewC dWcnb sc-iBPRYJ dWRxlP sc-hHftDr iIBJBt"
        >
          <div
            class="sc-gKsewC dWcnb sc-iBPRYJ dWRxlP sc-hHftDr iIBJBt"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
  scelerisque euismod risus at gravida. Pellentesque a nunc semper,
  ultrices lacus nec, mattis mauris
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Card Emphasized 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    <div
      style="width: 400px; height: 400px;"
    >
      <div
        class="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-hHftDr sc-dmlrTW cLDXoV gKJALV sc-cTkwdZ ceEQCj sc-jNMdTA eIbWGx"
      >
        <div
          class="sc-gKsewC dWcnb sc-iBPRYJ dWRxlP sc-hHftDr iIBJBt"
        >
          <div
            class="sc-gKsewC cFuckZ sc-iBPRYJ bBwSze sc-hHftDr kUtBaJ"
          >
            <h3
              class="sc-iktFzd ePMNkU sc-cBNfnY hcRIY"
            >
              Card with title
            </h3>
          </div>
          <div
            class="sc-gKsewC dWcnb sc-iBPRYJ dWRxlP sc-hHftDr iIBJBt"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
  scelerisque euismod risus at gravida. Pellentesque a nunc semper,
  ultrices lacus nec, mattis mauris
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Card Small 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    <div
      style="width: 400px; height: 400px;"
    >
      <div
        class="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-hHftDr sc-dmlrTW cLDXoV gKJALV sc-cTkwdZ ceEQCj sc-jNMdTA eIbWGx"
      >
        <div
          class="sc-gKsewC dWcnb sc-iBPRYJ dWRxlP sc-hHftDr iIBJBt"
        >
          <div
            class="sc-gKsewC dWcnb sc-iBPRYJ dWRxlP sc-hHftDr iIBJBt"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
  scelerisque euismod risus at gravida. Pellentesque a nunc semper,
  ultrices lacus nec, mattis mauris
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Card With Action Header 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    <div
      style="width: 400px; height: 400px;"
    >
      <div
        class="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-hHftDr sc-dmlrTW cLDXoV gKJALV sc-cTkwdZ kyJVgU sc-jNMdTA eIbWGx"
      >
        <div
          class="sc-gKsewC dWcnb sc-iBPRYJ dWRxlP sc-hHftDr iIBJBt"
        >
          <div
            class="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-hHftDr cLDXoV"
          >
            <h3
              class="sc-iktFzd ePMNkU sc-cBNfnY hcRIY"
            >
              Card With action title
            </h3>
            <button
              class="StyledButton-sc-323bzc-0 fVClA-D sc-bqyKva sc-bkzZxe gjQfnS dvvpJt sc-dIUggk fiTZeL"
              type="button"
            >
              Update
            </button>
          </div>
          <div
            class="sc-gKsewC dWcnb sc-iBPRYJ dWRxlP sc-hHftDr iIBJBt"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
  scelerisque euismod risus at gravida. Pellentesque a nunc semper,
  ultrices lacus nec, mattis mauris
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Card With Actions 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    <div
      style="width: 400px; height: 400px;"
    >
      <div
        class="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-hHftDr sc-dmlrTW cLDXoV gKJALV sc-cTkwdZ kyJVgU sc-jNMdTA bKdSdq"
      >
        <div
          class="sc-gKsewC dWcnb sc-iBPRYJ dWRxlP sc-hHftDr iIBJBt"
        >
          <div
            class="sc-gKsewC cFuckZ sc-iBPRYJ bBwSze sc-hHftDr kUtBaJ"
          >
            <h3
              class="sc-iktFzd ePMNkU sc-cBNfnY hcRIY"
            >
              Card with Actions
            </h3>
          </div>
          <div
            class="sc-gKsewC dWcnb sc-iBPRYJ dWRxlP sc-hHftDr iIBJBt"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
  scelerisque euismod risus at gravida. Pellentesque a nunc semper,
  ultrices lacus nec, mattis mauris 
          </div>
          <div
            class="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-hHftDr iIBJBt"
          >
            <hr
              class="sc-iUuytg kDfphZ sc-eggNIi kPInZt"
              type="dashed"
            />
            <div
              class="sc-gKsewC cFuckZ sc-iBPRYJ dWRxlP sc-hHftDr fqfxeY"
            >
              <button
                class="StyledButton-sc-323bzc-0 fGJlAh sc-bqyKva sc-kstrdz gjQfnS FUwNf sc-dIUggk gvyQgi"
                type="button"
              >
                Normal action
              </button>
              <button
                class="StyledButton-sc-323bzc-0 bxeVfd sc-bqyKva sc-kstrdz gjQfnS ekgxxv sc-dIUggk gvyQgi"
                type="button"
              >
                Danger action
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Card With Header 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    <div
      style="width: 400px; height: 400px;"
    >
      <div
        class="sc-gKsewC cgpPfo sc-iBPRYJ dWRxlP sc-hHftDr sc-dmlrTW cLDXoV gKJALV sc-cTkwdZ kyJVgU sc-jNMdTA eIbWGx"
      >
        <div
          class="sc-gKsewC dWcnb sc-iBPRYJ dWRxlP sc-hHftDr iIBJBt"
        >
          <div
            class="sc-gKsewC cFuckZ sc-iBPRYJ bBwSze sc-hHftDr kUtBaJ"
          >
            <h3
              class="sc-iktFzd ePMNkU sc-cBNfnY hcRIY"
            >
              Card with title
            </h3>
          </div>
          <div
            class="sc-gKsewC dWcnb sc-iBPRYJ dWRxlP sc-hHftDr iIBJBt"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam
  scelerisque euismod risus at gravida. Pellentesque a nunc semper,
  ultrices lacus nec, mattis mauris
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
